--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.martin.tpandroidmartin.MenuActivity">
+    tools:context="com.example.martin.tpandroidmartin.Activity.MenuActivity">
 
     <TextView
         android:layout_width="wrap_content"
